--- a/ex24/Makefile
+++ b/ex24/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: abizeau <marvin@42.fr>                     +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2016/11/07 13:54:37 by abizeau           #+#    #+#              #
+#    Updated: 2016/11/07 13:54:38 by abizeau          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME= libft.a
 
 SRC=	srcs/ft_putchar.c \
@@ -6,26 +18,26 @@ SRC=	srcs/ft_putchar.c \
 		srcs/ft_strlen.c \
 		srcs/ft_swap.c
 
-		INC = ./includes
+INC = ./includes
 
 OBJ = $(SRC:.c=.o)
 
 all: $(NAME)
 
-	$(NAME):
+$(NAME):
 	gcc -Wall -Wextra -Werror -c $(SRC) -I $(INC)
 	ar rc $(NAME) $(OBJ)
 	ranlib $(NAME)
 	@echo "$(NAME) has been created."
 
-	clean:
+clean:
 	@rm -rf $(OBJ)
 	@echo "$(OBJ) >>> Objects files are deleted."
 
-	fclean: clean
+fclean: clean
 	@rm -rf $(NAME)
 	@echo "$(NAME) are deleted."
 
-	re: fclean all
+re: fclean all
 
-	.PHONY: clean fclean re
+.PHONY: clean fclean re
